hydro2/hydro2-operator-derive/tests/trybuild/05_too_many_inputs.stderr
error: Encountered invalid syntax in `#[operator(...)]` attribute.
  --> tests/trybuild/05_too_many_inputs.rs:7:1
   |
7  | / #[operator(
8  | |     execute="five_in",
9  | |     opcode="BasicOpCode::TestOp",
10 | |     input0="i32",
...  |
14 | |     input4="i32" // this is the 5th → should fail
15 | | )]
   | |__^

warning: unused imports: `OpCode` and `Operator`
 --> tests/trybuild/05_too_many_inputs.rs:4:21
  |
4 | use hydro2_operator::{OpCode, NetResult, Operator};
  |                     ^^^^^^             ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
